--- a/android/build.gradle
+++ b/android/build.gradle
@@ -57,7 +57,7 @@ android {
     }
 
     dependencies {
-        implementation(name:'com.arthenica.ffmpegkit-flutter-6.0.2', ext:'aar')
+        implementation files('libs/com.arthenica.ffmpegkit-flutter-6.0.2.aar')
         implementation("androidx.annotation:annotation:1.9.1")
     }
 }
